8160196: Module summary page should display information based on "api" or "detail" mode
Reviewed-by: jjg, ksrini